[gd_scene load_steps=2 format=2]

[ext_resource path="res://Spawn.gd" type="Script" id=1]

[node name="Spawn" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Container" type="Node2D" parent="."]

[node name="SpawnP1" type="Position2D" parent="."]
position = Vector2( 64, 64 )

[node name="SpawnP2" type="Position2D" parent="."]
position = Vector2( 416, 64 )

[node name="SpawnP3" type="Position2D" parent="."]
position = Vector2( 64, 792 )
